# fastapi-blog-trial

./: .env.dev  .env.example  .env.examples  .gitignore  Dockerfile  Dockerfile.dev  README.md  aws_bucket_policy.json  aws_iam_policy.json  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1817ea965353_initial_schema.py  2a96c686beb5_fixed_model_for_password_hash.py  654a6b1e7124_added_image_for_each_post.py  85c31cb29e6e_added_likes_to_post_schema.py  9d9a4acbf0ef_added_dislike_count_to_posts.py
app/: .env.example  config.py  main.py
app/api/v1/: __init__.py  posts.py  users.py
app/core/: exceptions.py  logger.py  logging.py  middleware.py
app/db/: database.py
app/dependencies/: services.py
app/models/: models.py
app/providers/storage/: base.py  cloudinary.py  factory.py  keys.py  s3.py
app/repositories/: post_repository.py  user_repository.py
app/schemas/: post_schema.py  user_schema.py
app/services/: auth_service.py  cache_service.py  post_service.py  user_service.py
app/templates/email/: password_reset.html
app/uow/: unit_of_work.py
app/utils/: auth.py  cache.py  cache_handler.py  email_handler.py  image_handler.py
