[project]
name = "blogapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=5.1.1",
    "alembic>=1.18.4",
    "boto3>=1.43.24",
    "botocore>=1.43.6",
    "fastapi>=0.136.1",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.12.1",
    "uvicorn[standard]>=0.49.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "cloudinary>=1.44.2",
    "loguru>=0.7.3",
    "asyncpg>=0.31.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "moto[s3]>=5.2.2",
    "pytest>=9.0.3",
]
